# MindfulDesk-

./: .env.example  ARCHITECTURE.md  BUILD_STATUS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  LICENSE  MS_STORE_GUIDE.md  PRIVACY.md  PRODUCTION_READY.md  PROJECT_COMPLETE.md  PROJECT_TREE.txt  QUICKSTART.md  README.md  SETUP_SUCCESS.md  TESTING.md  WINDOWS_INSTALL.md  build-windows.bat  build.sh  index.html  package-lock.json  package.json  setup.bat  setup.sh  vite.config.ts
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  nightly.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  distraction_blocker.rs  focus_manager.rs  gamification.rs  health_reminders.rs  idle_detector.rs  journal_manager.rs  main.rs  stats_tracker.rs
src/components/: Dashboard.tsx  DistractionBlocker.tsx  ErrorBoundary.tsx  FocusTab.tsx  HealthReminders.tsx  JournalTab.tsx  LoadingSpinner.tsx  SettingsTab.tsx  StatsTab.tsx  index.ts
src/context/: ThemeContext.tsx
src/utils/: notifications.ts  storage.ts
